2011-09-01  Stefano Lattarini  <stefano.lattarini@gmail.com>

	automake: fix regression due to de-ansification support removal
	The last change `v1.11-947-g136b489' removed code that automake
	was using to decide whether binary objects were built by the
	generated Makefile.in, so that it could avoid to emit unneeded
	code when this was not the case.  Re-introduce such code in a
	less-obfuscated form, and add a test to ensure we don't regress
	again.
	* automake.in ($must_handle_compiled_objects): New global
	variable, telling whether the generated Makefile has to build
	compiled objects.
	(initialize_per_input): Reset it.
	(handle_programs, handle_libraries, handle_ltlibraries): Set
	it to a true value when required.
	(handle_compile): Don't generate any code if the variable
	`$must_handle_compiled_objects' is not set to a true value.
	* tests/no-extra-makefile-code.test: New test.
	* tests/Makefile.am (TESTS): Add it.

2011-08-28  Stefano Lattarini  <stefano.lattarini@gmail.com>

	automake: cleanups after de-ansification support removal (2)
	* automake.in ($get_object_extension_was_run): Remove, it's not
	really needed anymore.
	(&get_object_extension): Remove, it's a no-op now.
	All callers adjusted.

2011-08-28  Stefano Lattarini  <stefano.lattarini@gmail.com>

	automake: cleanups after de-ansification support removal (1)
	* automake.in (lang_c_rewrite, handle_single_transform): Rename 
	variable `$nonansi_obj' to `$obj'.

2011-08-28  Stefano Lattarini  <stefano.lattarini@gmail.com>

	ansi: remove obsolete code/files for de-ANSI-fication support
	* lib/ansi2knr.1, lib/ansi2knr.c: Deleted.
	* lib/Makefile.am (dist_pkgvdata_DATA): Do not list them anymore.
	* lib/am/ansi2knr.am: Delete.
	* lib/am/Makefile.am (dist_am_DATA): Do not list it anymore.
	* lib/Automake/Variable.pm (%_am_macro_for_var): Remove entries for
	`ANSI2KNR' and `U'.
	* m4/depout.m4 (_AM_OUTPUT_DEPENDENCY_COMMANDS): Don't care anymore
	about possible definition of the `$U' variable.