@@ -1,3 +1,9 @@
+2011-09-16  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	automake: remove special handling of `ANSI2KNR' make variable
+	* automake.in (define_configure_variable): Remove special-cased
+	handling of `ANSI2KNR' variable.  Related minor simplifications.
+
 2011-09-01  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	automake: fix regression due to de-ansification support removal
